Seção add painel

--- a/carousel.css
+++ b/carousel.css
@@ -4,7 +4,7 @@
 
 body {
   padding-bottom: 50px;
-  color: #470a63;
+  color: #33024a;
 }
 
 
@@ -51,7 +51,7 @@ body {
 /* Carousel base class */
 .carousel {
   height: 500px;
-  margin-bottom: 60px;
+  margin-bottom: 20px;
 }
 /* Since positioning the image, we need to help out the caption */
 .carousel-caption {
